--- a/point-node-java-runtime-core/src/main/resources/templates/layout/layout.html
+++ b/point-node-java-runtime-core/src/main/resources/templates/layout/layout.html
@@ -7,6 +7,7 @@
     <script src="${ctxPath}/webjars/jquery/jquery.min.js"></script>
     <script src="${ctxPath}/webjars/popper.js/umd/popper.min.js"></script>
     <script src="${ctxPath}/webjars/bootstrap/js/bootstrap.min.js"></script>
+    <script src="${ctxPath}/static/app/app.main.js"></script>
     ${head}
 </head>
 <body>
