--- a/point-node-java-runtime-core/src/main/resources/templates/pages/index.html
+++ b/point-node-java-runtime-core/src/main/resources/templates/pages/index.html
@@ -1,11 +1,6 @@
-<!--:
-var body = {
--->
-<h3>I'm alive...</h3>
-
-<script src="${ctxPath}/static/app/main.js"></script>
-<!--:};//end body-->
-
+<!--:var body = {-->
+<div id="pageBody" class="container-fluid p-0 m-0"></div>
+<script src="${ctxPath}/static/app/main.js"></script><!--:};//end body-->
 <!--:
 include("/layout/layout.html",{title:i18n('app.pages.index.title'), head:'', body:body}){}
 -->
